package.json change for github pages

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-chatbot-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://robocode24.github.io/my-chatbot-app/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -15,6 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",  
+    "deploy": "gh-pages -b master -d build",  
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -36,3 +39,4 @@
     ]
   }
 }
+
